--- a/BigSchool/Views/Course/Attending.cshtml
+++ b/BigSchool/Views/Course/Attending.cshtml
@@ -1,7 +1,10 @@
-﻿@model BigSchool.ViewModels.CoursesViewModel
+﻿
 @{
-    ViewBag.Title = "Hom Page";
+    ViewBag.Title = "Attending";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
+<h2>Attending</h2>
 <ul class="course">
     @foreach (var course in Model.UpcommingCourses)
     {
@@ -37,34 +40,34 @@
     }
 </ul>
 @section scripts
-{
+    {
     <script>
-        $(document).ready(function () {
-            $(".js-toggle-attendance").click(function (e) {
-                var button = $(e.target);
-                $.post("/api/attendances", { courseId: button.attr("data-course-id") })
-                    .done(function () {
+            $(document).ready(function ()
+            {
+                $(".js-toggle-attendance").click(function (e)
+                {
+                    var button = $(e.target);
+                    $.post("/api/attendances", { courseId: button.attr("data-course-id") }).done(fuction()
+                    {
                         button
                             .removeClass("btn-default")
                             .addClass("btn-info")
                             .text("Going");
                     })
-                    .fail(function () {
+                    .fail(fuction(){
                         alert("Something failed!");
                     });
+                });
+                $(".js-toggle-follow").click(function (e) {
+                    var button = $(e.target);
+                    $.post("/api/followings", { followeeId: button.attr("data-user-id") }).done(fuction()
+                    {
+                            button.text("Following");
+                        })
+                        .fail(fuction(){
+                            alert("Something failed!");
+                        });
+                });
             });
-
-            $(".js-toggle-follow").click(function (e) {
-                var button = $(e.target);
-                $.post("/api/followings", { followeeId: button.attr("data-user-id") })
-                    .done(function () {
-                        button.text("Following");
-                    })
-                    .fail(function () {
-                        alert("Something failed");
-                    });
-
-            });
-        });
     </script>
 }
