--- a/BigSchool/Views/Shared/_LoginPartial.cshtml
+++ b/BigSchool/Views/Shared/_LoginPartial.cshtml
@@ -7,17 +7,12 @@
 
     <ul class="navbar-nav navbar-right">
         <li class="dropdown">
-            <a href="" class="dropdown-toggle text-dark" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">@User.Identity.GetUserName()<span class="caret"></span></a>
+            <a href="" class="dropdown-toggle text-white" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">@User.Identity.GetUserName()<span class="caret"></span></a>
             <ul class="dropdown-menu">
-                <li >
-                    @Html.ActionLink("Course", "Index", "Courses", htmlAttributes: new {@class = "text-dark" })
-                </li>
-                <li >
-                    @Html.ActionLink("Manager", "Index", "Manage", routeValues: null, htmlAttributes: new {@class= "text-dark", title = "Manage" })
-                </li>
-                <li >
-                    <a href="javascript:document.getElementById('logoutForm').submit()">Log off</a>
-                </li>
+                <li><a href="@Url.Action("Attending","Courses")">Course I'm Going</a></li>
+                <li><a href="#">Lecture I'm Flowing'</a></li>
+                <li role="separator" class="dropdown-divider"></li>
+                <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
             </ul>
         </li>
     </ul>
